--- a/site/404.html
+++ b/site/404.html
@@ -120,7 +120,7 @@
   
 
 
-  <a href="https://github.com/erdiko/documentation/" title="Go to repository" class="md-source" data-md-source="github">
+  <a href="https://github.com/erdiko/erdiko" title="Go to repository" class="md-source" data-md-source="github">
     
       <div class="md-source__icon">
         <svg viewBox="0 0 24 24" width="24" height="24">
@@ -167,7 +167,7 @@
   
 
 
-  <a href="https://github.com/erdiko/documentation/" title="Go to repository" class="md-source" data-md-source="github">
+  <a href="https://github.com/erdiko/erdiko" title="Go to repository" class="md-source" data-md-source="github">
     
       <div class="md-source__icon">
         <svg viewBox="0 0 24 24" width="24" height="24">
